--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -7,7 +7,7 @@
 # bluesky_url: # your bluesky URL
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: voleti.harshitha@example.com # your email address
+email: harshitha.voleti@mail.concordia.ca # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: hvoleti # your GitHub user name
@@ -42,7 +42,7 @@ linkedin_username: harshithavoleti # your LinkedIn user name
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
 # work_url: # work page URL
-x_username: hvoleti # your X handle
+x_username: h_voleti # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
 # custom_social: # can be any name here other than the ones already defined above
